ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aninaka-ingress
  namespace: aninaka
  annotations:
    kubernetes.io/ingress.global-static-ip-name: aninaka-ip
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx # k8s 1.19以降で必要
  tls:
    - hosts:
        - user-auth.aninaka-api.net
        - anime.aninaka-api.net
      secretName: aninaka-api-tls
  rules:
    - host: user-auth.aninaka-api.net
      http:
        paths:
          - backend:
              service:
                name: aninaka-user-auth-api
                port:
                  number: 8081
            path: /
            pathType: Prefix
    - host: anime.aninaka-api.net
      http:
        paths:
          - backend:
              service:
                name: aninaka-anime-api
                port:
                  number: 8082
            path: /
            pathType: Prefix
